src/objects/testObj__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>testObjs</relationshipLabel>
        <relationshipName>testObjs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Number_should_be_enter__c</fullName>
        <label>Number should be enter</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Testing_with_new_Records__c</fullName>
        <label>Testing with new Records</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>application</label>
        <referenceTo>application__c</referenceTo>
        <relationshipLabel>testObjs</relationshipLabel>
        <relationshipName>testObjs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>application_name__c</fullName>
        <label>application MD</label>
        <referenceTo>application__c</referenceTo>
        <relationshipLabel>testObjs (application)</relationshipLabel>
        <relationshipName>testObjs1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>testObj</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>testObj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>testObjs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>